syntax = "proto3";

package seigr;

import "file_metadata.proto"; // Importing TemporalLayer from file_metadata.proto

// Message for tracking temporal history of modifications or rollbacks
message TemporalHistory {
    string history_id = 1;                      // Unique ID for this temporal history entry
    repeated TemporalLayer temporal_layers = 2; // List of temporal layers representing historical snapshots
    string created_by = 3;                      // ID of the user or system that created the history
    string created_at = 4;                      // Timestamp of the creation of the history record
    string last_modified_at = 5;                // Timestamp of the last modification
    map<string, string> metadata = 6;           // Additional metadata for context or usage
}

// Message for lineage tracking of data within the system
message LineageTracking {
    string lineage_id = 1;                     // Unique identifier for the lineage tracking
    repeated string ancestor_hashes = 2;       // List of hashes representing ancestors in lineage
    repeated string descendant_hashes = 3;     // List of hashes representing descendants
    string original_creation = 4;              // Timestamp of the original data creation
    map<string, string> lineage_metadata = 5;  // Metadata for additional lineage context
}

// Message for retrieving a specific temporal snapshot
message TemporalSnapshotRequest {
    string request_id = 1;                     // Unique identifier for the snapshot request
    string segment_id = 2;                     // ID of the segment to retrieve a snapshot for
    string target_timestamp = 3;               // Timestamp of the desired snapshot state
    bool exact_match = 4;                      // If true, only an exact match for the timestamp is acceptable
    map<string, string> request_metadata = 5;  // Additional metadata for the request
}

// Message to represent the result of a snapshot retrieval
message TemporalSnapshotResponse {
    string request_id = 1;                     // Matches the request ID of the snapshot request
    TemporalLayer snapshot_layer = 2;          // Retrieved temporal layer representing the snapshot
    bool success = 3;                          // Indicates if retrieval was successful
    string error_message = 4;                  // Error message if retrieval failed
    map<string, string> response_metadata = 5; // Additional metadata for the response
}
